# ShrapFreeipa

./: .gitignore  Cargo.toml  README.md
src/: collect.rs  ldap.rs  main.rs  utils.rs
