[package]
name = "kurs04"
version = "0.1.0"
edition = "2024"

[dependencies]
ldap3 = { version = "0.11", features = ["tls-native","gssapi"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["full"]}
zip = "0.6"
chrono = { version = "0.4.20-rc.1" }
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.2"
colored = "2.1"
regex = "1"
